fix: using -webkit-overflow-scrolling: on body

--- a/src/components/layout/header/mobile.module.css
+++ b/src/components/layout/header/mobile.module.css
@@ -1,7 +1,5 @@
 .sidebarPusher {
   min-height: 100vh;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
 }
 
 .sidebarButton {
